Added License to readme

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nodejs",
     "javascript"
   ],
-  "author": "Adam Sherif, Anas Mohamed",
+  "author": "Mini Seed",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mini-seed/Hadith-Discord/issues"
